hide()->hideEles(), show()->showEles() #2

--- a/demo.html
+++ b/demo.html
@@ -87,11 +87,11 @@
                 });
 
                 $("#hide").click(function () {
-                    cy.$(":selected").hide();
+                    cy.$(":selected").hideEles();
                 });
 
                 $("#showAll").click(function () {
-                    cy.elements().show();
+                    cy.elements().showEles();
                 });
 
                 $("#highlightNeighbors").click(function () {
