Remove edges.hidden and nodes.hidden options, defined setVisibilityOnHide and setDisplayOnHide options instead of them
Other improvements
Remove npm-debug.log
Remove cytoscape-undo-redo.js from src folder and add it to lib folder

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -13,7 +13,7 @@
 		<!-- for testing with local version of cytoscape.js -->
 		<!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
 
-        <script src="src/cytoscape-undo-redo.js"></script>
+        <script src="lib/cytoscape-undo-redo.js"></script>
 
 
 		<script src="cytoscape-view-utilities.js"></script>
