Added multiple selection with taphold-and-free.

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -86,6 +86,10 @@
                 });
 
                 cy.viewUtilities({
+                    neighbor: function(node){
+                        return node.closedNeighborhood();
+                    },
+                    neighborSelectTime: 1000
                 });
                 var ur = cy.undoRedo();
 
