Update demo files to show shift+taphold feature

--- a/demo.html
+++ b/demo.html
@@ -112,7 +112,8 @@
 		<h1>cytoscape.js-view-utilities demo</h1>
 
         <b id="hide" style="cursor: pointer; color: darksalmon">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/>
-        <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b>
+        <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b> <br/>
+        <b>SHIFT + taphold</b> to select neighbors<br/>
 
             <div id="cy"></div>
         </div>
