--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -124,7 +124,8 @@
         <b>CTRL+Z</b> to undo, <b>CTRL+Y</b> to redo<br/>
 
         <b id="hide" style="cursor: pointer; color: darksalmon">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/>
-        <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b>
+        <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b> <br/>
+        <b>SHIFT + taphold</b> to select neighbors<br/>
 
             <div id="cy"></div>
         </div>
