--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
 
 		<!-- for testing with local version of cytoscape.js -->
 		<!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
-
+                <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cose-bilkent/2.0.4/cytoscape-cose-bilkent.js"></script>
 		<script src="cytoscape-view-utilities.js"></script>
 
 		<style>
@@ -41,7 +41,7 @@
 
                 var cy = window.cy = cytoscape({
                     container: document.getElementById('cy'),
-                    layout: { name: "cose" },
+                    layout: { name: "cose-bilkent" },
                     style: [
                         {
                             selector: 'node',
@@ -126,13 +126,18 @@
                     },
                     neighborSelectTime: 1000
                 });
+                
+                var layout = cy.layout({
+                  name: 'cose-bilkent',
+                  randomize: false,
+                  fit: false
+                });
 
                 // Increase border width to show nodes with hidden neighbors
                 function thickenBorder(eles){
                   eles.forEach(function( ele ){
                     var defaultBorderWidth = Number(ele.css("border-width").substring(0,ele.css("border-width").length-2));
                     ele.css("border-width", defaultBorderWidth + 2);
-                    //ele.css("border-color", '#DAA520');
                   });
                   return eles;
                 }
@@ -151,12 +156,18 @@
                     api.hide(cy.$(":selected"));
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     thickenBorder(nodesWithHiddenNeighbor);
+                    if(document.getElementById('layout').checked){
+                      layout.run();  
+                    }
                 });
 
                 $("#showAll").click(function () {
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     thinBorder(nodesWithHiddenNeighbor);
                     api.show(cy.elements());
+                    if(document.getElementById('layout').checked){
+                      layout.run();  
+                    }
                 });
 
                 $("#showHiddenNeighbors").click(function () {
@@ -165,10 +176,14 @@
                     api.show(cy.nodes(":selected").neighborhood().union(cy.nodes(":selected").neighborhood().parent()));
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     thickenBorder(nodesWithHiddenNeighbor);
+                    if(document.getElementById('layout').checked){
+                      layout.run();  
+                    }                    
                 });
 
                 $("#highlightNeighbors").click(function () {
-                    api.highlightNeighbors(cy.$(":selected"));
+                    if(cy.$(":selected").length > 0)
+                      api.highlightNeighbors(cy.$(":selected"));
                 });
 
                 $("#removeHighlights").click(function () {
@@ -185,6 +200,8 @@
         <b id="showHiddenNeighbors" style="cursor: pointer; color: darksalmon">Show Hidden Neighbors of Selected</b> <br/>
         <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b> <br/>
         <b>SHIFT + taphold</b> to select neighbors<br/>
+        <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
+        <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
 
         <div id="cy"></div>
 
