--- a/demo.html
+++ b/demo.html
@@ -180,6 +180,34 @@
                       layout.run();  
                     }                    
                 });
+                
+                var tappedBefore;
+
+                cy.on('tap', 'node', function (event) {
+                  var node = this;
+
+                  var tappedNow = node;
+                  setTimeout(function () {
+                    tappedBefore = null;
+                  }, 300);
+                  if (tappedBefore && tappedBefore.id() === tappedNow.id()) {
+                    tappedNow.trigger('doubleTap');
+                    tappedBefore = null;
+                  } else {
+                    tappedBefore = tappedNow;
+                  }
+                });
+                
+                cy.on('doubleTap', 'node', function (event) {
+                    var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
+                    thinBorder(nodesWithHiddenNeighbor);
+                    api.show(cy.nodes(":selected").neighborhood().union(cy.nodes(":selected").neighborhood().parent()));
+                    nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
+                    thickenBorder(nodesWithHiddenNeighbor);
+                    if(document.getElementById('layout').checked){
+                      layout.run();  
+                    }  
+                });
 
                 $("#highlightNeighbors").click(function () {
                     if(cy.$(":selected").length > 0)
