Implement Selection and Marquee Zoom

--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,6 @@
 		<!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
                 <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cose-bilkent/2.0.4/cytoscape-cose-bilkent.js"></script>
 		<script src="cytoscape-view-utilities.js"></script>
-
 		<style>
 			body {
 				font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
@@ -38,7 +37,6 @@
 		<script>
 
 			document.addEventListener("DOMContentLoaded", function(){
-
                 var cy = window.cy = cytoscape({
                     container: document.getElementById('cy'),
                     layout: { name: "cose-bilkent" },
@@ -181,6 +179,21 @@
                     }                    
                 });
                 
+                $('#zoom').click( function(){    
+                    var selectedNodes = cy.nodes(":selected");
+                    api.zoom( selectedNodes);
+                    if(document.getElementById('layout').checked){
+                      layout.run();  
+                    }   
+                })
+
+                $('#marqueeZoom').click( function(){
+                    api.marqueeZoom( cy);   
+                    if( document.getElementById('layout').checked){
+                        layout.run();
+                    }
+                })
+
                 var tappedBefore;
 
                 cy.on('tap', 'node', function (event) {
@@ -227,6 +240,9 @@
         <b id="hide" style="cursor: pointer; color: darksalmon">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/>
         <b id="showHiddenNeighbors" style="cursor: pointer; color: darksalmon">Show Hidden Neighbors of Selected</b> <br/>
         <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b> <br/>
+        <b id="zoom" style="cursor: pointer; color: darksalmon">Zoom Selected</b><br/>
+        <b id="marqueeZoom" style="cursor: pointer; color: darksalmon">Marquee Zoom</b><br/>
+        <b id=
         <b>SHIFT + taphold</b> to select neighbors<br/>
         <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
         <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
