Implement Selection and Marquee Zoom (#11)
* Implement Selection and Marquee Zoom

* Fix requested changes

* Fix requested changes

Reorder calculations
Fix bug related to tabhold without click
Remove slider

* Fix extend calculation

--- a/demo.html
+++ b/demo.html
@@ -38,7 +38,6 @@
 		<script>
 
 			document.addEventListener("DOMContentLoaded", function(){
-
                 var cy = window.cy = cytoscape({
                     container: document.getElementById('cy'),
                     layout: { name: "cose-bilkent" },
@@ -181,11 +180,24 @@
                     }                    
                 });
                 
-                var tappedBefore;
+                $('#zoomToSelected').click( function(){    
+                    var selectedEles = cy.$(":selected");
+                    api.zoomToSelected(selectedEles);
+                    if(document.getElementById('layout').checked){
+                      layout.run();  
+                    }   
+                })
 
+                $('#marqueeZoom').click( function(){
+                    api.marqueeZoom();   
+                    if( document.getElementById('layout').checked){
+                        layout.run();
+                    }
+                })
+
+                var tappedBefore;
                 cy.on('tap', 'node', function (event) {
                   var node = this;
-
                   var tappedNow = node;
                   setTimeout(function () {
                     tappedBefore = null;
@@ -227,6 +239,9 @@
         <b id="hide" style="cursor: pointer; color: darksalmon">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/>
         <b id="showHiddenNeighbors" style="cursor: pointer; color: darksalmon">Show Hidden Neighbors of Selected</b> <br/>
         <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b> <br/>
+        <b id="zoomToSelected" style="cursor: pointer; color: darksalmon">Zoom to Selected</b><br/>
+        <b id="marqueeZoom" style="cursor: pointer; color: darksalmon">Marquee Zoom</b>
+        <b>SHIFT + drag</b> to specifcy region<br/>
         <b>SHIFT + taphold</b> to select neighbors<br/>
         <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
         <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
