Include hidden elements to bounding box

--- a/demo.html
+++ b/demo.html
@@ -247,7 +247,7 @@
         <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b> <br/>
         <b id="zoomToSelected" style="cursor: pointer; color: darksalmon">Zoom to Selected</b><br/>
         <b id="marqueeZoom" style="cursor: pointer; color: darksalmon">Marquee Zoom</b>
-        <b>SHIFT + drag</b> to specifcy region<br/>
+        <b>SHIFT + drag</b> to specify region<br/>
         <b>SHIFT + taphold</b> to select neighbors<br/>
         <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
         <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
