--- a/demo.html
+++ b/demo.html
@@ -7,12 +7,12 @@
 
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
-        <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 		<script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
 
 		<!-- for testing with local version of cytoscape.js -->
 		<!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
-                <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cose-bilkent/2.0.4/cytoscape-cose-bilkent.js"></script>
+    <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cose-bilkent/2.0.4/cytoscape-cose-bilkent.js"></script>
 		<script src="cytoscape-view-utilities.js"></script>
 
 		<style>
@@ -22,19 +22,88 @@
 			}
 
 			#cy {
-				z-index: 999;
-                width: 85%;
-                height: 85%;
-                float: left;
+				width: 80%;
+				height: 100%;
+				left: 21%;
+				top: 0%;
+				float: left;
+				overflow: hidden;
+				position: fixed;
 			}
-
-			h1 {
-				opacity: 0.5;
-				font-size: 1em;
+			.topnav {
+				width: 20%;
+			  background-color: #e9e9e9;
 				font-weight: bold;
+				border-color: black;
+				border-style: solid;
+				font-size: 16;
+			}
+			.topnav b:hover
+			{
+			   background-color:white;
+			}
+			/* Customize the label (the container) */
+			.topnav .container {
+
+			  position: relative;
+			  padding: 14px;
+			  cursor: pointer;
+			  font-size: 15px;
+			  left: 5px;
+			  -webkit-user-select: none;
+			  -moz-user-select: none;          'border-color': 'purple'
+			  -ms-user-select: none;
+			  user-select: none;
+			}
+			/* Hide the browser's default radio button */
+			.topnav .container input {
+			  position: absolute;
+			  opacity: 0;
+			  cursor: pointer;
+			  height: 0;
+			  width: 0;
+			}
+			/* Create a custom radio button */
+			.topnav .checkmark {
+			  position: absolute;
+			  top: 17px;
+			  left: 0;
+			  right: 0px;
+			  height: 12px;
+			  width: 12px;
+			  margin-right: 20px;
+			  background-color: #000000;
+			  border-radius: 50%;
+			}
+			/* On mouse-over, add a grey background color */
+			.container:hover input ~ .checkmark {
+				background-color: #000000;
+			}
+			/* When the radio button is checked, add a blue background */
+			.container input:checked ~ .checkmark {
+				background-color: #000          'border-color': 'purple'000;
+			}
+			/* Create the indicator (the dot/circle - hidden when not checked) */
+			.checkmark:after {
+				content: "";
+				position: absolute;
+				display: none;
+			}
+			/* Show the indicator (dot/circle) when checked */
+			.container input:checked ~ .checkmark:after {
+				display: block;
+			}
+			/* Style the indicator (dot/circle) */
+			.container .checkmark:after {
+				position: absolute;
+				top: 3px;
+				left: 3px;
+				width: 6px;
+				height: 6px;
+				border-radius: 50%;
+				background: white;
 			}
 		</style>
-
 		<script>
 
 			document.addEventListener("DOMContentLoaded", function(){
@@ -49,25 +118,39 @@
                                 'border-color': '#ff0000'
                             }
                         },
-
                         {
                             selector: 'edge',
                             style: {
                                 'target-arrow-shape': 'triangle'
                             }
                         },
+												{
+													selector: 'edge:selected',
+													style: {
+															'line-color': 'black'
+													}
+												},
+												{
+													selector: 'node:selected',
+													style: {
+															'border-color': 'black',
+															'border-width': '3px',
+															'background-color': 'grey'
+													}
+												},
+												{
+													selector: 'node:parent',
+													style: {
+															'border-color': 'black',
+															'background-color': 'lightgrey'
 
-                        {
-                            selector: ':selected',
-                            style: {
-
-                            }
-                        }
+													}
+												}
                     ],
 
                     elements: {
                         nodes: [
-                            { data: { id: 'n1', name: 'n1' }, style: {'border-color': '#aabbcc'} },
+                            { data: { id: 'n1', name: 'n1' } },
                             { data: { id: 'n2', name: 'n2', parent: "n1"} },
                             { data: { id: 'n3', name: 'n3', parent: "n1" } },
                             { data: { id: 'n4', name: 'n4', parent: "n1" } },
@@ -85,9 +168,9 @@
                             { data: { id: 'n16', name: 'n16' } },
                             { data: { id: 'n17', name: 'n17' } },
                             { data: { id: 'n18', name: 'n18' } },
-                            { data: { id: 'n19', name: 'n19' } }, 
+                            { data: { id: 'n19', name: 'n19' } },
                             { data: { id: 'n20', name: 'n20' } },
-                            { data: { id: 'n21', name: 'n21' } },                                                         
+                            { data: { id: 'n21', name: 'n21' } },
                         ],
                         edges: [
                             { data: { source: 'n2', target: 'n3' } },
@@ -97,7 +180,7 @@
                             { data: { source: 'n5', target: 'n7' } },
                             { data: { source: 'n6', target: 'n7' } },
                             { data: { source: "n7", target: "n8" } },
-                            { data: { source: "n8", target: "n9" } },   
+                            { data: { source: "n8", target: "n9" } },
                             { data: { source: 'n7', target: 'n10' } },
                             { data: { source: 'n6', target: 'n11' } },
                             { data: { source: "n7", target: "n11" } },
@@ -105,19 +188,20 @@
                             { data: { source: 'n10', target: 'n11' } },
                             { data: { source: 'n10', target: 'n12' } },
                             { data: { source: "n12", target: "n13" } },
-                            { data: { source: "n12", target: "n14" } },  
+                            { data: { source: "n12", target: "n14" } },
                             { data: { source: "n12", target: "n15" } },
-                            { data: { source: "n13", target: "n15" } },   
+                            { data: { source: "n13", target: "n15" } },
                             { data: { source: 'n15', target: 'n16' } },
                             { data: { source: 'n15', target: 'n17' } },
                             { data: { source: "n15", target: "n18" } },
                             { data: { source: "n17", target: "n19" } },
                             { data: { source: 'n17', target: 'n20' } },
                             { data: { source: 'n19', target: 'n20' } },
-                            { data: { source: "n19", target: "n21" } }                           
+                            { data: { source: "n19", target: "n21" } }
                         ]
                     }
                 });
+
 
                 var api = cy.viewUtilities({
                     neighbor: function(node){
@@ -125,7 +209,7 @@
                     },
                     neighborSelectTime: 1000
                 });
-                
+
                 var layout = cy.layout({
                   name: 'cose-bilkent',
                   randomize: false,
@@ -157,7 +241,7 @@
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     thickenBorder(nodesWithHiddenNeighbor);
                     if(document.getElementById('layout').checked){
-                      layout.run();  
+                      layout.run();
                     }
                 });
 
@@ -167,7 +251,7 @@
                     thinBorder(nodesWithHiddenNeighbor);
                     api.show(cy.elements());
                     if(document.getElementById('layout').checked){
-                      layout.run();  
+                      layout.run();
                     }
                 });
 
@@ -179,21 +263,21 @@
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     thickenBorder(nodesWithHiddenNeighbor);
                     if(document.getElementById('layout').checked){
-                      layout.run();  
-                    }                    
+                      layout.run();
+                    }
                 });
 
-                $('#zoomToSelected').click( function(){ 
-                    api.disableMarqueeZoom();   
+                $('#zoomToSelected').click( function(){
+                    api.disableMarqueeZoom();
                     var selectedEles = cy.$(":selected");
                     api.zoomToSelected(selectedEles);
                     if(document.getElementById('layout').checked){
-                      layout.run();  
-                    }   
+                      layout.run();
+                    }
                 })
 
                 $('#marqueeZoom').click( function(){
-                    api.enableMarqueeZoom();   
+                    api.enableMarqueeZoom();
                     if( document.getElementById('layout').checked){
                         layout.run();
                     }
@@ -213,7 +297,7 @@
                     tappedBefore = tappedNow;
                   }
                 });
-                
+
                 cy.on('doubleTap', 'node', function (event) {
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     thinBorder(nodesWithHiddenNeighbor);
@@ -221,17 +305,56 @@
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     thickenBorder(nodesWithHiddenNeighbor);
                     if(document.getElementById('layout').checked){
-                      layout.run();  
-                    }  
+                      layout.run();
+                    }
                 });
+
+								function chooseHighlightColor(){
+									var option = "";
+									if(document.getElementById('highlight1').checked)
+									{
+										option = "highlighted";
+									}
+									else if(document.getElementById('highlight2').checked)
+									{
+										option = "highlighted2";
+									}
+									else if(document.getElementById('highlight3').checked)
+									{
+										option = "highlighted3";
+									}
+									else if(document.getElementById('highlight4').checked)
+									{
+										option = "highlighted4";
+									}
+                  return option;
+                }
 
                 $("#highlightNeighbors").click(function () {
                     api.disableMarqueeZoom();
                     if(cy.$(":selected").length > 0)
-                      api.highlightNeighbors(cy.$(":selected"));
+										{
+											var option = chooseHighlightColor();
+                      api.highlightNeighbors(cy.$(":selected"), option);
+										}
                 });
 
-                $("#removeHighlights").click(function () {
+								$("#highlightElements").click(function () {
+                    api.disableMarqueeZoom();
+                    if(cy.$(":selected").length > 0)
+										{
+											var option = chooseHighlightColor();
+                      api.highlight(cy.$(":selected"), option);
+										}
+                });
+
+								$("#removeSelectedHighlights").click(function () {
+                    api.disableMarqueeZoom();
+										if(cy.$(":selected").length > 0)
+                    	api.removeHighlights(cy.$(":selected"));
+                });
+
+                $("#removeAllHighlights").click(function () {
                     api.disableMarqueeZoom();
                     api.removeHighlights();
                 });
@@ -241,18 +364,38 @@
 
 	<body>
 		<h1>cytoscape.js-view-utilities demo</h1>
-
-        <b id="hide" style="cursor: pointer; color: darksalmon">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/>
-        <b id="showHiddenNeighbors" style="cursor: pointer; color: darksalmon">Show Hidden Neighbors of Selected</b> <br/>
-        <b id="highlightNeighbors" style="cursor: pointer; color: darksalmon">Highlight Neighbors</b> / <b id="removeHighlights" style="cursor: pointer; color: darkmagenta">Remove Highlights</b> <br/>
-        <b id="zoomToSelected" style="cursor: pointer; color: darksalmon">Zoom to Selected</b><br/>
-        <b id="marqueeZoom" style="cursor: pointer; color: darksalmon">Marquee Zoom</b>
-        <b>SHIFT + drag</b> to specify region<br/>
-        <b>SHIFT + taphold</b> to select neighbors<br/>
+		<div class="topnav">
+				<b id="hide" style="cursor: pointer; color: darkmagenta">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/><br/>
+        <b id="highlightColor">Choose Highlight Color:</b> <br/><br/>
+				<label class="container"  style="color: blue">Blue
+				  <input type="radio" name="radiobutton" id="highlight1" value="highlight1">
+				  <span class="checkmark"></span>
+				</label> <br/><br/>
+				<label class="container" style="color: purple">Purple
+				  <input type="radio" name="radiobutton" id="highlight2" value="highlight2">
+				  <span class="checkmark"></span>
+				</label>  <br/><br/>
+				<label class="container" style="color: green">Green
+				  <input type="radio" name="radiobutton" id="highlight3" value="highlight3">
+				  <span class="checkmark"></span>
+				</label> <br/><br/>
+				<label class="container" style="color: red">Red
+				  <input type="radio" name="radiobutton" id="highlight4" value="highlight4">
+				  <span class="checkmark"></span>
+				</label> <br/><br/>
+				<b id="highlightElements" style="cursor: pointer; color: darkmagenta">Highlight Elements</b> <br/><br/>
+        <b id="highlightNeighbors" style="cursor: pointer; color: darkmagenta">Highlight Neighbors</b><br/><br/>
+				<b id="showHiddenNeighbors" style="cursor: pointer; color: darkmagenta">Show Hidden Neighbors of Selected</b> <br/><br/>
+				<b id="removeSelectedHighlights" style="cursor: pointer; color: darkmagenta">Remove Selected Highlights</b> <br/><br/>
+				<b id="removeAllHighlights" style="cursor: pointer; color: darkmagenta">Remove All Highlights</b> <br/><br/>
+				<b id="zoomToSelected" style="cursor: pointer; color: darkmagenta">Zoom to Selected</b><br/><br/>
+				<b id="marqueeZoom" style="cursor: pointer; color: darkmagenta">Marquee Zoom</b><br/><br/>
+        <b>Shift + drag</b> to specify region<br/>
+        <b>Shift + taphold</b> to select neighbors<br/>
         <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
         <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
-
-        <div id="cy"></div>
+	 </div>
+   <div id="cy"></div>
 
 	</body>
 
